--- a/UsedCarsDeepEDAProcessing.ipynb
+++ b/UsedCarsDeepEDAProcessing.ipynb
@@ -72,7 +72,7 @@
     }
    },
    "source": [
-    "#### Run processing pipeline with EDA aggregations"
+    "#### Run processing pipeline with Exploratory Data Analysis (EDA) aggregations"
    ]
   },
   {
@@ -714,8 +714,8 @@
     }
    },
    "source": [
-    "#### Data Mining Scenario\n",
-    "- Identify Ford Cars upsell oppourtunities"
+    "#### Insight Generation Scenario\n",
+    "- Identify upsell oppourtunities for Ford Cars"
    ]
   },
   {
@@ -750,8 +750,8 @@
    "metadata": {},
    "source": [
     "- Explore Ford vehicles along the \"Fuel\" and \"Drive\" dimensions\n",
-    "- Establish a confidence level in the legitimacy of a potential upsell oppourtunity\n",
-    "- Estimated Potential Additional Income per Upsell"
+    "- Establish a confidence level in the potential upsell oppourtunity\n",
+    "- Estimated Potential incremental Income per Upsell"
    ]
   },
   {
@@ -965,7 +965,7 @@
     }
    },
    "source": [
-    "#### Calculate Upsell oppourtunity confidence and potential additional revenue\n",
+    "#### Calculate confidence and potential additional revenue\n",
     "- Extract required parameters from dataset"
    ]
   },
@@ -1039,7 +1039,7 @@
    "metadata": {},
    "source": [
     "- The p-value indicates high confidence that additional revenue can be driven by upselling from **Ford Gas 4WD** to **Ford Diesel 4WD**\n",
-    "- The estimated additional income per upsell is **$9610.78**"
+    "- The estimated incremental revenue per upsell is **$9610.78**"
    ]
   },
   {
@@ -1085,8 +1085,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- There's near certainty that additional revenue can be driven by upselling from **Ford Gas FWD** to **Ford Gas 4WD**\n",
-    "- The estimated additional income per upsell is **$7338.95**"
+    "- The p-value indicates high confidence that additional revenue can be driven by upselling from **Ford Gas FWD** to **Ford Gas 4WD**\n",
+    "- The estimated incremental revenue per upsell is **$7338.95**"
    ]
   },
   {
